foundations/css-exercises/project/landing-page/style.css
* {
    margin: 0;
    padding: 0;
    font-family: "Josefin Sans", sans-serif;
}

/* layout */
.hero-section section, .images-with-info, .quote, .call-to-action {
    padding: 30px;
    margin: 70px 0;
}


/* --------------- Header and nav styling --------------- */
header {
    background-color: #1f2937;
}

.header-container {
    display: flex;
    justify-content: space-between;
    text-align: center;
    margin: 0 13%;
    padding: 10px 0;
    align-items: center;
}

.header-logo {
    color: #F9FAF8;
    font-size: 24px;
}

nav {
    display: flex;
    justify-content: center;
}

nav ul {
    display: flex;
    justify-content: flex-end;
    list-style: none;
    font-size: 18px;
}

nav ul li {
    width: 30%;
}

nav ul li a {
    text-decoration: none;
    color: #e5e7eb;
}

/* --------------- Section styling --------------- */
/* --------------- Main section --------------- */
.hero-section section {
    padding: 30px;
    margin: 70px 0;
}

main {
    background-color: #1f2937;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

main section {
   width: 35%;
}

main section p {
    font-size: 18px;
    color: #e5e7eb;
}

.hero-image {
    display: flex;
    justify-content: center;
    align-items: center;
}

img {
    height: 250px;
    width: auto;
}

.top-sign-up-button {
    color: #fff;
    background-color: #3882f6;
    border: none;
    padding: 8px 25px;
    border-radius: 5px;
}

h1 {
    font-size: 48px;
    font-weight: 700;
    color: #f9faf8;
}

.hero p {
    margin: 10px 0;
}



/* --------------- Images with info section --------------- */
h2 {
    font-size: 36px;
    font-weight: 700;
    margin: 30px 0;
    color: #1f2937;
}

.images-with-info {
    text-align: center;
}

.images-with-info ul {
    display: flex;
    justify-content: center;
}

li {
    list-style: none;
    width: 17.5%;
}

.images-with-info img {
    width: 175px;
    height: auto;
    border: 5px solid #3883f6;
    border-radius: 10px;
    margin: 10px;
}


/* --------------- Quote section --------------- */
.quote {
    background-color: #E5E7EB;
}

.quote-container {
    display: flex;
    justify-content: center;
    padding: 50px 0;
}

.quote blockquote {
    width: 70%;
    font-size: 36px;
    color: #1F2937;
    font-style: italic;
    font-weight: lighter;
    text-align: center;
}

section cite {
    display: flex;
    justify-content: end;
    font-size: 28px;
    color: #1f2937;
    font-weight: bold;
    margin-right: 25%;
}



/* --------------- Call to action --------------- */
.call-to-action {
    /* padding: 0 70px; */
}

.action-section {
    display: flex;
    justify-content: space-evenly;
    background-color: #3883f6;
    color: white;
    align-items: center;
    padding: 40px 0;
    border-radius: 10px;
    margin: 0 17.5%;
}


.bottom-sign-up-button {
    color: #fff;
    background-color: #3882f6;
    border: 1px solid white;
    padding: 8px 25px;
    border-radius: 5px;
    text-align: center;
}


/* --------------- Footer --------------- */
footer {
    background-color: #1f2937;
}

footer p {
    color: #E5E7EB;
    text-align: center;
    padding: 30px 0;
}

